Cadastro de bandas

--- a/Estudio/appsettings.json
+++ b/Estudio/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "EstudioBD": "Server=localhost;Port=5432;Database=[DATABASE NAME];User Id=[DATABASE USERNAME];Password=[DATABASE PASSWORD]"
+  }
 }
