--- a/Estudio/Estudio.csproj
+++ b/Estudio/Estudio.csproj
@@ -7,6 +7,15 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Pages\Agendamentos\" />
+    <Folder Include="Pages\Consumiveis\" />
+    <Folder Include="Pages\Instrumentos\" />
   </ItemGroup>
 
 </Project>
